monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0274/A0274Super.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0274;

grammar A0274Super {

 symbol Foo;

}